[gd_scene load_steps=12 format=3 uid="uid://boul1g5vxvq7"]

[ext_resource type="Script" path="res://main.gd" id="1_5vub8"]
[ext_resource type="PackedScene" uid="uid://cv5l1mdjxin3q" path="res://player.tscn" id="1_27csp"]
[ext_resource type="Material" uid="uid://b302273a61jod" path="res://art/newEnemyMaterial.tres" id="1_omjai"]
[ext_resource type="PackedScene" uid="uid://c1ds446sork37" path="res://mob.tscn" id="2_qcdq8"]
[ext_resource type="FontFile" uid="uid://bqby0lebgjm21" path="res://fonts/Montserrat-Medium.ttf" id="3_7apw3"]
[ext_resource type="Script" path="res://ScoreLabel.gd" id="4_thmlt"]
[ext_resource type="Script" path="res://Panel.gd" id="7_3g0r5"]

[sub_resource type="BoxShape3D" id="BoxShape3D_jpmp3"]

[sub_resource type="BoxMesh" id="BoxMesh_55xui"]

[sub_resource type="Theme" id="Theme_er5yb"]
default_font = ExtResource("3_7apw3")
default_font_size = 22

[sub_resource type="BoxShape3D" id="BoxShape3D_2cgs0"]

[node name="main" type="Node"]
script = ExtResource("1_5vub8")
EnemyTemplate = ExtResource("2_qcdq8")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_layer = 4
collision_mask = 7

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
transform = Transform3D(60, 0, 0, 0, 2, 0, 0, 0, 60, 0, 0, 0)
shape = SubResource("BoxShape3D_jpmp3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(60, 0, 0, 0, 2, 0, 0, 0, 60, 0, 0, 0)
mesh = SubResource("BoxMesh_55xui")
surface_material_override/0 = ExtResource("1_omjai")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 21, 0)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1_27csp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4603, 0)

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, -2.98023e-08, 0, 2.98023e-08, 1, 0, 0, 19)

[node name="Mob" parent="." instance=ExtResource("2_qcdq8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10.3321)

[node name="Mob2" parent="." instance=ExtResource("2_qcdq8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.1473, 0, 0)

[node name="Mob3" parent="." instance=ExtResource("2_qcdq8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -11.624)

[node name="Mob4" parent="." instance=ExtResource("2_qcdq8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.9037, 0, -0.0311537)

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 197.0
offset_bottom = 83.0
size_flags_horizontal = 8
theme = SubResource("Theme_er5yb")

[node name="ScoreLabel" type="Label" parent="UserInterface" node_paths=PackedStringArray("winScreen", "loseScreen")]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.071066
anchor_top = -0.060241
anchor_bottom = -0.060241
offset_left = 29.0
offset_top = 17.0
offset_right = 162.0
offset_bottom = 48.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Score: 0"
script = ExtResource("4_thmlt")
winScreen = NodePath("../WinScreen")
loseScreen = NodePath("../LoseScreen")
metadata/_edit_use_anchors_ = true

[node name="WinScreen" type="AcceptDialog" parent="UserInterface"]
title = "Congrats You Win!!"
initial_position = 2
size = Vector2i(295, 100)
ok_button_text = "Restart"

[node name="LoseScreen" type="ConfirmationDialog" parent="UserInterface"]
title = "Better luck next time!"
initial_position = 1
size = Vector2i(320, 100)
ok_button_text = "Reset"
cancel_button_text = "Return"

[node name="Panel" type="Panel" parent="UserInterface"]
layout_mode = 0
offset_left = 11.0
offset_top = 53.0
offset_right = 162.0
offset_bottom = 81.0
script = ExtResource("7_3g0r5")

[node name="minutes" type="Label" parent="UserInterface/Panel"]
layout_mode = 0
offset_left = 17.0
offset_right = 57.0
offset_bottom = 31.0
text = "00:"

[node name="seconds" type="Label" parent="UserInterface/Panel"]
layout_mode = 0
offset_left = 55.0
offset_right = 95.0
offset_bottom = 31.0
text = "00."

[node name="miliSeconds" type="Label" parent="UserInterface/Panel"]
layout_mode = 0
offset_left = 91.0
offset_right = 135.0
offset_bottom = 31.0
text = "000"

[node name="Walls" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Walls"]
transform = Transform3D(60, 0, 0, 0, 60, 0, 0, 0, 2, -0.0861855, 0, -30.225)
shape = SubResource("BoxShape3D_2cgs0")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Walls"]
transform = Transform3D(-2.62268e-06, 0, 2, 0, 60, 0, -60, 0, -8.74228e-08, 30.845, 0, 0.921558)
shape = SubResource("BoxShape3D_2cgs0")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="Walls"]
transform = Transform3D(-2.62268e-06, 0, 2, 0, 60, 0, -60, 0, -8.74228e-08, -31.2829, 0, 0.921558)
shape = SubResource("BoxShape3D_2cgs0")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="Walls"]
transform = Transform3D(60, 0, 0, 0, 60, 0, 0, 0, 2, 0.0132046, 0, 30.7486)
shape = SubResource("BoxShape3D_2cgs0")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[connection signal="lose" from="Player" to="." method="_on_player_lose"]
[connection signal="lose" from="Player" to="UserInterface/ScoreLabel" method="_on_player_lose"]
[connection signal="lose" from="Player" to="UserInterface/Panel" method="_on_player_lose"]
[connection signal="caught" from="Mob" to="UserInterface/ScoreLabel" method="_on_mob_caught"]
[connection signal="caught" from="Mob2" to="UserInterface/ScoreLabel" method="_on_mob_caught"]
[connection signal="caught" from="Mob3" to="UserInterface/ScoreLabel" method="_on_mob_caught"]
[connection signal="caught" from="Mob4" to="UserInterface/ScoreLabel" method="_on_mob_caught"]
[connection signal="win" from="UserInterface/ScoreLabel" to="." method="_on_score_label_win"]
[connection signal="win" from="UserInterface/ScoreLabel" to="Player" method="_on_score_label_win"]
[connection signal="win" from="UserInterface/ScoreLabel" to="UserInterface/Panel" method="_on_score_label_win"]
[connection signal="confirmed" from="UserInterface/WinScreen" to="UserInterface/ScoreLabel" method="_on_win_screen_confirmed"]
[connection signal="canceled" from="UserInterface/LoseScreen" to="UserInterface/ScoreLabel" method="_on_lose_screen_canceled"]
[connection signal="confirmed" from="UserInterface/LoseScreen" to="UserInterface/ScoreLabel" method="_on_lose_screen_confirmed"]
[connection signal="end" from="UserInterface/Panel" to="Player" method="_on_panel_end"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
